[gd_scene load_steps=6 format=2]

[ext_resource path="res://players/Player/CameraTarget.gd" type="Script" id=1]
[ext_resource path="res://logic/CameraLockTrigger/CameraTargetFSM.gd" type="Script" id=2]
[ext_resource path="res://logic/CameraLockTrigger/CameraLockXState.gd" type="Script" id=3]
[ext_resource path="res://logic/CameraLockTrigger/CameraLockZState.gd" type="Script" id=4]
[ext_resource path="res://logic/CameraLockTrigger/CameraLockUnlockedState.gd" type="Script" id=5]


[node name="CameraTarget" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraTargetFSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CameraLockXState" type="Node" parent="CameraTargetFSM"]
script = ExtResource( 3 )

[node name="CameraLockZState" type="Node" parent="CameraTargetFSM"]
script = ExtResource( 4 )

[node name="CameraLockUnlockedState" type="Node" parent="CameraTargetFSM"]
script = ExtResource( 5 )
